Front end for connection

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">BLE Test Peripheral</string>
 
+    <!-- Adv -->
     <string name="label_advertisingStatus">Advertising Status</string>
     <string name="status_advertising">Advertising</string>
     <string name="status_notAdvertising">Not Advertising</string>
@@ -8,4 +9,10 @@
     <string name="status_advFeatureUnsupported">Not Advertising. Advertising not supported.</string>
     <string name="status_advInternalError">Not Advertising. Internal error occurred.</string>
     <string name="status_advTooManyAdvertisers">Not Advertising. No advertising instance is available.</string>
+
+    <!-- Connection -->
+    <string name="label_connectionStatus">Connection Status</string>
+    <string name="status_notConnected">Not Connected to any devices</string>
+    <string name="status_connectedTo">Connected To</string>
+    <string name="errorCode">Error Code</string>
 </resources>
