--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,6 @@
     <!-- Connection -->
     <string name="label_connectionStatus">Connection Status</string>
     <string name="status_notConnected">Not Connected to any devices</string>
-    <string name="status_connectedTo">Connected To</string>
+    <string name="status_connectedTo">Connected to</string>
     <string name="errorCode">Error Code</string>
 </resources>
