--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="status_advTooManyAdvertisers">Not Advertising. No advertising instance is available.</string>
 
     <!-- Bluetooth -->
-    <string name="bluetoothNotSupported">Bluetooth Not Supported</string>
-    <string name="bluetoothAdvertisingNotSupported">BLE Advertising Not Supported</string>
-    <string name="bluetoothNotEnabled">Bluetooth is Not Enabled</string>
+    <string name="bluetoothNotSupported">BLE Test Peripheral closing: Bluetooth Not Supported</string>
+    <string name="bluetoothNotEnabled">BLE Test Peripheral closing: Bluetooth is Not Enabled</string>
+    <string name="bluetoothAdvertisingNotSupported">BLE Test Peripheral closing: BLE Advertising Not Supported</string>
 </resources>
