Front end for battery level

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="status_notConnected">Not Connected to any devices</string>
     <string name="status_connectedTo">Connected to</string>
     <string name="errorCode">Error Code</string>
+    <string name="batteryService_name">Battery Service</string>
 
 </resources>
