--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,7 @@
     <string name="status_connectedTo">Connected to</string>
     <string name="errorCode">Error Code</string>
     <string name="batteryService_name">Battery Service</string>
+    <string name="batteryLevelTooHigh">Batter Level is too high</string>
+    <string name="batteryLevelNotNumber">Battery Level is not a Number</string>
 
 </resources>
