--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">BLE Test Peripheral</string>
-
+    <string name="title_activity_peripherals_list">Peripherals List</string>
 
     <!-- Bluetooth -->
     <string name="bluetoothNotSupported">BLE Test Peripheral closing: Bluetooth Not Supported</string>
@@ -24,4 +24,5 @@
     <string name="batteryService_name">Battery Service</string>
     <string name="batteryLevelTooHigh">Batter Level shouldn\'t exceed 100</string>
     <string name="batteryLevelIncorrect">Please enter a number between 0 and 100</string>
+
 </resources>
