--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,5 @@
     <string name="heartRateMeasurementValueTooHigh">Heart Rate shouldn\'t exceed 255</string>
     <string name="heartRateMeasurementValueInvalid">Please enter a number between 0 and 255</string>
     <string name="energyExpendedTooHigh">Energy Expended shouldn\'t exceed 65,535</string>
-    <string name="energyExpendedInvalid">Please pick a number between 0 and 65,535</string>
+    <string name="energyExpendedInvalid">Please enter a number between 0 and 65,535</string>
 </resources>
