Add message for no adv

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,7 @@
     <string name="label_energyExpended">Energy Expended</string>
     <string name="heartRateMeasurementValueInvalid">Please enter a number between 0 and 255</string>
     <string name="energyExpendedInvalid">Please enter a number between 0 and 65535</string>
+    <string name="status_noLeAdv">LE Advertising is not available. Please pair with a device to be
+        discoverable.
+    </string>
 </resources>
