Add a disconnect button so that we can simulate a peripheral disconnecting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="status_noLeAdv">LE Advertising is not available. Please pair with a device to be
         discoverable.
     </string>
+    <string name="menu_disconnect_devices">Disconnect Devices</string>
 </resources>
