add Find Me Profile (FMP) support, that is Find Me Target https://developer.bluetooth.org/TechnologyOverview/Pages/FMP.aspx

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,9 @@
     <string name="batteryLevelTooHigh">Batter Level shouldn\'t exceed 100</string>
     <string name="batteryLevelIncorrect">Please enter a number between 0 and 100</string>
 
+    <!-- Battery Service -->
+    <string name="ImmediateAlertService_name">Immediate Alert Service</string>
+
     <!-- Hear Rate Service -->
     <string name="label_bodySensorLocation">Body Sensor Location</string>
     <string name="heartRateServiceName">Heart Rate Service</string>
